syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//系统-部门
service SysDept {
  //系统-部门-创建一条数据
  rpc CreateSysDept(CreateSysDeptReq) returns (CreateSysDeptReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_dept/create"
      body: "*"
    };
  }
  //系统-部门-更新一条数据
  rpc UpdateSysDept(UpdateSysDeptReq) returns (UpdateSysDeptReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_dept/update"
      body: "*"
    };
  }
  //系统-部门-更新状态
  rpc UpdateSysDeptStatus(UpdateSysDeptStatusReq) returns (UpdateSysDeptStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_dept/update/status"
      body: "*"
    };
  }
  //系统-部门-删除一条数据
  rpc DeleteSysDept(DeleteSysDeptReq) returns (DeleteSysDeptReply) {
    option (google.api.http) = {
      post: "/admin/v1/sys_dept/delete"
      body: "*"
    };
  }
  //系统-部门-单条数据查询
  rpc GetSysDeptInfo(GetSysDeptInfoReq) returns (GetSysDeptInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sys_dept/info"};
  }
  //系统-部门-列表数据查询
  rpc GetSysDeptList(GetSysDeptListReq) returns (GetSysDeptListReply) {
    option (google.api.http) = {get: "/admin/v1/sys_dept/list"};
  }
}

//系统-部门信息
message SysDeptInfo {
  string id = 1; // 编号
  string pid = 2; // 父级id
  string name = 3; // 部门简称
  string adminId = 4; // 负责人id
  int32 status = 5; // -1=禁用 1=开启
  int32 sort = 6; // 排序值
  string createdAt = 7; // 创建时间
  string updatedAt = 8; // 更新时间
  string adminName = 9; // 负责人名称
}

//请求-系统-部门-创建一条数据
message CreateSysDeptReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["name"]
    }
  };

  string pid = 1 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
    }
  ]; // 父级id
  string name = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 64
  }]; // 部门简称
  string adminId = 3 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
    }
  ]; // 负责人
  int32 sort = 8 [(buf.validate.field).int32 = {gte: 0}]; // 排序值
  int32 status = 9 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; // -1=禁用 1=开启
}

//响应-系统-部门-创建一条数据
message CreateSysDeptReply {
  string id = 1; // 编号
}

//请求-系统-部门-更新一条数据
message UpdateSysDeptReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "id",
        "name"
      ]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
  string pid = 2 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 128
    }
  ]; // 父级id
  string name = 3 [(buf.validate.field).string = {
    min_len: 1
    max_len: 64
  }]; // 部门简称
  string adminId = 4 [
    (buf.validate.field).ignore = IGNORE_IF_UNPOPULATED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 64
    }
  ]; // 负责人id
  int32 sort = 9 [(buf.validate.field).int32 = {gte: 0}]; // 排序值
  int32 status = 8 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; // -1=禁用 1=开启
}

//响应-系统-部门-更新一条数据
message UpdateSysDeptReply {}

//请求-系统-部门-更新状态
message UpdateSysDeptStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
  int32 status = 2 [(buf.validate.field).int32 = {
    in: [
      -1,
      1
    ]
  }]; // -1=禁用 1=开启
}

//响应-系统-部门-更新状态
message UpdateSysDeptStatusReply {}

//请求-系统-部门-删除一条数据
message DeleteSysDeptReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号集合
}

//响应-系统-部门-删除一条数据
message DeleteSysDeptReply {}

//请求-系统-部门-单条数据查询
message GetSysDeptInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };

  string id = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 128
  }]; // 编号
}

//响应-系统-部门-单条数据查询
message GetSysDeptInfoReply {
  SysDeptInfo info = 1;
}

//请求-系统-部门-列表数据查询
message GetSysDeptListReq {}

//响应-系统-部门-列表数据查询
message GetSysDeptListReply {
  int32 total = 1; // 总数
  repeated SysDeptInfo list = 2; // 列表数据
}
